--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cookie Clicker V.2</title>
-
+<title>Cookie Clicker</title>
 <link rel="shortcut icon" href="img/favicon.ico" />
 <link href="http://fonts.googleapis.com/css?family=Kavoon&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 <link href="style.css?v=1.5028" rel="stylesheet" type="text/css">
@@ -16,7 +15,7 @@
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-29324474-2']);
-  _gaq.push(['_setDomainName', 'dashnet.org']);
+  _gaq.push(['_setDomainName', 'gaminghub.me']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -30,8 +29,8 @@
 <body>
 
 <div id="topBar">
-	<div>
-		<a href="index.html"><p style="text-align:center;">Cookie Clicker V.2</p></a>
+	<div style="text-align: center">
+		<b style="text-align:center;">Cookie Clicker V.2</b> &copy; <a href="http://gaminghub.me" target="_blank">GamingHub</a>, 2017
 		<div id="links" style="display:block;position:absolute;right:8px;top:4px;"></div>
 	</div>
 </div>
@@ -39,9 +38,9 @@
 <div id="game">
 	<div id="javascriptError">
 		<div style="padding:64px 128px;">
-			<div class="title">Oops, looks like the game isn't loading right!</div>
-			<div>Please make sure your javascript is enabled, then refresh.<br>
-			This could also be caused by a problem on our side, in which case - wait a moment, then refresh!</div>
+			<div class="title">Loading</div>
+			<div>Cookie Clicker V.2<br>
+			Made by GamingHub (www.gaminghub.me)</div>
 		</div>
 	</div>
 
@@ -80,7 +79,7 @@
 		<div id="comments" class="inset title">
 			<div id="prefsButton" class="button">Menu</div>
 			<div id="statsButton" class="button">Stats</div>
-			<div id="logButton" class="button" style="font-size:80%;">Site</div>
+			<div id="logButton" class="button" style="font-size:80%;">About</div>
 			<div id="commentsText"></div>
 			<div class="separatorBottom"></div>
 		</div>
@@ -96,7 +95,7 @@
 			<div id="products">
 			</div>
 		</div>
-		
+	</div>
 	
 	<div id="tooltipAnchor"><div id="tooltip" onMouseOut="Game.tooltip.hide();"></div></div>
 
